--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "devDependencies": {
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
+    "raw-loader": "^3.1.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^3.8.0",
+    "xml-loader": "^1.2.1"
   }
 }
