--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0",
     "xml-loader": "^1.2.1"
+  },
+  "dependencies": {
+    "lit-html": "^1.1.2",
+    "rxjs": "^6.5.2"
   }
 }
